fixed group form mid align

--- a/app/assets/stylesheets/content/banner.scss
+++ b/app/assets/stylesheets/content/banner.scss
@@ -1,7 +1,6 @@
 .content-banner__container {
   @include white-box-grey-border;
   width: 100%;
-  height: 196px;
   margin-top: 15px;
   margin-bottom: 15px;
 }
@@ -33,7 +32,7 @@
   padding: 7px 10px;
   border-radius: 3px;
   text-align: center;
-  margin: 7px 0 0 5px;
+  margin-right: 5px;
   color: $grey-5;
 }
 
@@ -45,5 +44,5 @@
 }
 
 .content-banner__lower {
-  height: 20%;
+  padding: 10px;
 }
