--- a/app/assets/stylesheets/content/left.scss
+++ b/app/assets/stylesheets/content/left.scss
@@ -87,6 +87,7 @@
 
     .right {
       float: right;
+      overflow: hidden;
       border: 1px solid $grey-3;
       width: 60px;
       height: 60px;
