--- a/app/assets/stylesheets/general/clearfix.scss
+++ b/app/assets/stylesheets/general/clearfix.scss
@@ -11,7 +11,7 @@ div {
 a {
   text-decoration: none;
   color:inherit;
-  overflow: auto;
+  overflow: hidden;
 }
 
 a:hover {
