--- a/app/assets/stylesheets/modules/modal.scss
+++ b/app/assets/stylesheets/modules/modal.scss
@@ -10,5 +10,5 @@
 }
 
 .modal.show {
-  display: block;
+  display: table;
 }
